examples/negative/type_errors/L1/10_eq_bool_int.ob
MODULE EqBoolInt;

VAR b: BOOLEAN;
    i: INTEGER;
    ok: BOOLEAN; (* Ensures errors occur on the correct line *)

BEGIN
  b := TRUE;
  i := 3;
  b := b = i; ok := TRUE;
END EqBoolInt.
